<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" tools:ignore="ExtraText">
    <TextView
            android:text="@string/titulo"
            android:layout_width="158dp"
            android:layout_height="34dp"
            android:id="@+id/textView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="76dp" android:layout_marginStart="76dp"/>
    <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginLeft="112dp" android:layout_marginStart="112dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <TextView
            android:text="@string/telefono"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:inputType="phone"
            android:digits="01234567"
            android:id="@+id/textView4" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/etApellido" app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginLeft="100dp" android:layout_marginStart="100dp"/>
    <TextView
            android:text="@string/cedula"
            android:layout_width="59dp"
            android:layout_height="21dp"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/etNombre"/>

    <TextView
            android:text="@string/ocupacion"
            android:layout_width="72dp"
            android:layout_height="28dp"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <TextView
            android:text="@string/Direccion"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <TextView
            android:text="@string/registro"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:id="@+id/textView8" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <EditText
            android:layout_width="123dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNombre"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <EditText
            android:layout_width="148dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etApellido" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toEndOf="@+id/etNombre"
            android:layout_marginStart="36dp" android:layout_marginLeft="36dp"/>
    <EditText
            android:layout_width="148dp"
            android:layout_height="44dp"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/etTelefono"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toEndOf="@+id/etCedula"
            android:layout_marginStart="12dp" android:layout_marginLeft="12dp"
            style="@style/Widget.AppCompat.AutoCompleteTextView" android:autoLink="phone"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etOcupacion" android:layout_marginTop="180dp"
            app:layout_constraintTop_toBottomOf="@+id/etNombre" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etDireccion" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/etOcupacion" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btContinuar" tools:text="@string/continuar"
            android:text="@string/continuar"
            app:layout_constraintTop_toBottomOf="@+id/etDireccion" android:layout_marginStart="100dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="100dp"
            android:layout_marginTop="28dp"/>
    <EditText
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etCedula"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:inputType="textAutoComplete"
            style="@style/Widget.AppCompat.AutoCompleteTextView"/>
    <TextView
            android:text="@string/sexo"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/etNombre" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <Spinner
            android:layout_width="151dp"
            android:layout_height="33dp"
            android:id="@+id/spSexo" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView18"/>
</android.support.constraint.ConstraintLayout>