<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity2" android:id="@+id/layaut">

    <Button
            android:text="@string/fin"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/btFinalizar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="156dp" android:layout_marginStart="156dp" android:layout_marginTop="84dp"
            app:layout_constraintTop_toBottomOf="@+id/etMontoCuota"/>
    <TextView
            android:text="@string/titulo"
            android:layout_width="159dp"
            android:layout_height="31dp"
            android:id="@+id/textView9" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/RegistroCredito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/Monto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/interes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" app:layout_constraintStart_toEndOf="@+id/textView11"
            android:layout_marginLeft="12dp" android:layout_marginStart="12dp" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"/>
    <TextView
            android:text="@string/plazo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" app:layout_constraintStart_toEndOf="@+id/textView12"
            android:layout_marginLeft="72dp" android:layout_marginStart="72dp" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"/>
    <EditText
            android:layout_width="80dp"
            android:layout_height="38dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etMonto" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"/>
    <EditText
            android:layout_width="76dp"
            android:layout_height="35dp"
            android:ems="10"
            android:id="@+id/etPlazo"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintStart_toEndOf="@+id/spInteres" android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" android:inputType="number"/>
    <TextView
            android:text="@string/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etMonto" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="155dp"
            android:layout_height="42dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/etFecha"
            app:layout_constraintTop_toBottomOf="@+id/textView14" android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"/>
    <TextView
            android:text="@string/fechinInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etFecha" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/etFechafin"
            app:layout_constraintTop_toBottomOf="@+id/textView15" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"/>
    <TextView
            android:text="@string/montopagar"
            android:layout_width="107dp"
            android:layout_height="22dp"
            android:id="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/etFechafin" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/montocuota"
            android:layout_width="108dp"
            android:layout_height="34dp"
            android:id="@+id/textView17"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView16"/>
    <Spinner
            android:layout_width="129dp"
            android:layout_height="28dp"
            android:id="@+id/spInteres" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintStart_toEndOf="@+id/etMonto"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <Button
            android:text="@string/fecha1"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:id="@+id/button" tools:ignore="MissingConstraints"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/etPlazo"
            app:layout_constraintStart_toEndOf="@+id/etFecha" android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"/>
    <TextView
            android:text="0.0"
            android:layout_width="194dp"
            android:layout_height="32dp"
            android:id="@+id/etMontoPagar" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etFechafin" app:layout_constraintStart_toEndOf="@+id/textView16"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="0.0"
            android:layout_width="194dp"
            android:layout_height="18dp"
            android:id="@+id/etMontoCuota"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/etMontoPagar"/>
    <TextView
            android:text="Nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView23" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"/>
    <Spinner
            android:layout_width="335dp"
            android:layout_height="29dp"
            android:id="@+id/spNombres" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView23" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"/>
</android.support.constraint.ConstraintLayout>