<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main4Activity">
    <TextView
            android:text="Registro de Prestamo"
            android:layout_width="167dp"
            android:layout_height="33dp" android:id="@+id/textView19"
            android:textColorLink="#3F51B5"
            android:textColor="#3F51B5" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="95dp"
            android:layout_marginStart="95dp"/>
    <TextView
            android:text="Ver Cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView20" android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/textView19" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="38dp" android:layout_marginStart="38dp"/>
    <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView21" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/textView20" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="38dp" android:layout_marginStart="38dp"/>
    <TextView
            android:text="@string/apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView22" android:layout_marginTop="66dp"
            app:layout_constraintTop_toBottomOf="@+id/textView19" android:layout_marginLeft="91dp"
            android:layout_marginStart="91dp" app:layout_constraintStart_toEndOf="@+id/textView21"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNom"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="38dp" android:layout_marginStart="38dp" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/textView21"/>
    <TextView
            android:text="@string/sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView25" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNom" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="38dp" android:layout_marginStart="38dp"/>
    <TextView
            android:text="@string/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView27"
            android:layout_marginLeft="108dp"
            android:layout_marginStart="108dp" app:layout_constraintStart_toEndOf="@+id/textView25"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvApe"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSex" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView25" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="37dp" android:layout_marginStart="37dp"/>
    <TextView
            android:text="texview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTel" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView27" android:layout_marginLeft="84dp"
            android:layout_marginStart="84dp" app:layout_constraintStart_toEndOf="@+id/tvSex"/>
    <TextView
            android:layout_width="55dp"
            android:layout_height="18dp" android:id="@+id/tvApe"
            app:layout_constraintTop_toBottomOf="@+id/textView22"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="180dp"
            android:layout_marginRight="180dp" android:layout_marginTop="12dp"/>
    <TextView
            android:text="@string/cedula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView30" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSex" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="38dp" android:layout_marginStart="38dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCed" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/textView30" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="38dp" android:layout_marginStart="38dp"/>
    <TextView
            android:text="@string/ocupacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView32" android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/tvCed" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="38dp" android:layout_marginStart="38dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvOcu" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView32" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="38dp" android:layout_marginStart="38dp"/>
    <TextView
            android:text="@string/Direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView34" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvOcu" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="38dp" android:layout_marginStart="38dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDir" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView34" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="38dp" android:layout_marginStart="38dp"/>
    <Button
            android:text="NUEVO PRESTAMO "
            android:layout_width="138dp"
            android:layout_height="34dp"
            android:id="@+id/Nuevo"
            android:textSize="12sp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDir" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <Button
            android:text="ANTERIOR"
            android:layout_width="82dp"
            android:layout_height="32dp"
            android:id="@+id/btAnterior"
            android:textSize="12sp" android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" app:layout_constraintStart_toEndOf="@+id/Nuevo"
            android:layout_marginTop="236dp" app:layout_constraintTop_toBottomOf="@+id/tvTel"/>
    <Button
            android:text="SIGUIENTE"
            android:layout_width="84dp"
            android:layout_height="33dp"
            android:id="@+id/btSiguiente"
            android:textSize="12sp"
            android:layout_marginTop="236dp" app:layout_constraintTop_toBottomOf="@+id/tvTel"
            app:layout_constraintStart_toEndOf="@+id/btAnterior"
            android:layout_marginLeft="4dp" android:layout_marginStart="4dp"/>
</android.support.constraint.ConstraintLayout>